--- a/src/index.css
+++ b/src/index.css
@@ -1275,17 +1275,37 @@ button:hover{
     margin-top: 0px;
     float: left;
 }
-.S_left0{
+.S_left_title{
     width: 780px;
+    height: 45px;
+    background-color: rgb(35, 27, 47);
+    border-bottom: 1px solid rgb(23, 21, 32);
+    border-radius: 3px 3px 0px 0px;
+}
+.S_left0{
+    width: 380px;
     height: 40px;
     font-family: "Big Shoulders Stencil Display";
     font-size: 23pt;
     padding-top: 5px;
-    float: right;
-    background-color: rgb(35, 27, 47);
-    border-bottom: 1px solid rgb(23, 21, 32);
-    border-radius: 3px 3px 0px 0px;
+    margin-left: 200px;
+    float: left;
     text-align: center;
+}
+.S_left0_tabs .actived{
+    border-bottom: 1px solid #f4d823;
+}
+.S_left0_tab{
+    font-size: 12pt;
+    display: inline-block;
+    width: 100px;
+    padding-bottom: 3px;
+    float: right;
+    text-align: center;
+    margin-top: 18px;
+    border-bottom: 1px solid rgb(23, 21, 32);
+    cursor: pointer;
+    font-weight: 400;
 }
 .S_left_tab{
     width: 260px;
@@ -1919,6 +1939,104 @@ button:hover{
     font-size: 10pt;
     padding-right: 29px;
 }
+.S_left_wiki{
+    background-color: rgb(38, 35, 53);
+    border-radius: 0px 0px 3px 3px;
+}
+.S_left_wiki_skill{
+    font-size: 15pt;
+    text-align: left;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-left: 55px;
+}
+.S_left_wiki_vod{
+    width: 700px;
+    height: 350px;
+    margin: auto;
+    background-color: black;
+    border-radius: 3px;
+}
+.S_left_wiki_skill_imgbox{
+    width: 780px;
+    border-bottom: 1px solid #3b4147;
+}
+.S_left_wiki_skill_imgbox .actived{
+    border: 1px solid #f4d823;
+}
+.S_left_wiki_skill_img{
+    width: 50px;
+    margin: 10px;
+    margin-left: 55px;
+    margin-right: -35px;
+    border: 1px solid #3b4147;
+    cursor: pointer;
+}
+.S_left_wiki_skill_detailbox{
+    font-size: 13pt;
+}
+.S_left_wiki_skill_detail1{
+    width: 660px;
+    padding: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
+    border-bottom:  1px solid #3b4147;
+    word-break: break-all;
+}
+.S_left_wiki_skill_detail2{
+    width: 660px;
+    padding: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
+    word-break: break-all;
+}
+.S_left_wiki_stats_all{
+    background-color: #262335;
+    width: 780px;
+    height: 400px;
+    border-radius: 3px;
+    margin-top: 10px;
+}
+.S_left_wiki_stats_title{
+    font-size: 15pt;
+    text-align: left;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 50px;
+    float: left;
+    width: 730px;
+}
+.S_left_wiki_stats{
+    float: left;
+    background-color: #262335;
+    width: 200px;
+    margin: 20px;
+    margin-left: 35px;
+}
+.S_left_wiki_stat_title{
+    width: 200px;
+    text-align: center;
+    font-size: 14pt;
+    float: left;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #3b4147;
+}
+.S_left_wiki_stat{
+    float: left;
+    width: 200px;
+}
+.S_left_wiki_stat1{
+    float: left;
+    text-align: left;
+}
+.S_left_wiki_stat2{
+    float: right;
+    text-align: right;
+}
+
 .S_Trend{
     background-color: rgb(38, 35, 53);
     text-align: center;
