--- a/src/index.css
+++ b/src/index.css
@@ -284,6 +284,109 @@ button:hover{
     margin-top: 39px;
     margin-left: -140px;
 }
+.S_Ranker_List_itemtooltip1{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 32px;
+    margin-left: -50px;
+    margin-left: -20px;
+}
+.S_Ranker_List_itemtooltip2{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 32px;
+    margin-left: -79px;
+}
+.S_Ranker_List_itemtooltip3{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 32px;
+    margin-left: -138px;
+}
+.S_Ranker_detail_itemtooltip1{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 40px;
+    margin-left: -3px;
+}
+.S_Ranker_detail_itemtooltip2{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 40px;
+    margin-left: -72px;
+}
+.S_Ranker_detail_itemtooltip3{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(23, 21, 32);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 3px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    text-align: center;
+    margin-top: 32px;
+    margin-left: -141px;
+}
 .S_skill_tooltip{
     visibility: hidden;
     width: 200px;
@@ -379,6 +482,24 @@ button:hover{
     visibility: visible;
 }
 .footer_button:hover .footer_tooltip{
+    visibility: visible;
+}
+.S_Ranker_List_itembox:hover  .S_Ranker_List_itemtooltip1{
+    visibility: visible;
+}
+.S_Ranker_List_itembox:hover  .S_Ranker_List_itemtooltip2{
+    visibility: visible;
+}
+.S_Ranker_List_itembox:hover  .S_Ranker_List_itemtooltip3{
+    visibility: visible;
+}
+.S_Ranker_detail_itembox:hover  .S_Ranker_detail_itemtooltip1{
+    visibility: visible;
+}
+.S_Ranker_detail_itembox:hover  .S_Ranker_detail_itemtooltip2{
+    visibility: visible;
+}
+.S_Ranker_detail_itembox:hover  .S_Ranker_detail_itemtooltip3{
     visibility: visible;
 }
 .rank_span{
@@ -1158,6 +1279,12 @@ button:hover{
     min-height: 1555px;
     overflow: hidden;
 }
+.S_main2{
+    width: 1152px;
+    margin: auto;
+    margin-top: 40px;
+    overflow: hidden;
+}
 .S_top{
 }
 .S_top-cha{
@@ -1260,14 +1387,49 @@ button:hover{
     font-weight: 300;
     font-size: 11pt;
 }
+.S_detail_tabbanner{
+    width: 1152px;
+    float: left;
+    margin-top: 25px;
+}
+.S_detail_tabs{
+    float: left;
+    text-align: left;
+    font-size: 15pt;
+    margin-left: 10px;
+    font-weight: 300;
+    color: gray;
+    margin-bottom: 10px;
+}
+.S_detail_tabs .actived{
+    color: #d1d1d1;
+    font-weight: 400;
+}
+.S_detail_tab{
+    float: left;
+    display: inline-block;
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    cursor: pointer;
+}
 .detail_notice{
+    display: inline-block;
+    width: 400px;
+    font-size: 11pt;
+    height: 30px;
+    float: right;
+    text-align: right;
+    margin-top: 8px;
+}
+.detail_notice2{
     display: inline-block;
     width: 1152px;
     font-size: 11pt;
     height: 30px;
     float: left;
     text-align: left;
-    margin-top: 10px;
+    margin-top: 8px;
 }
 .S_left{
     width: 780px;
@@ -1737,7 +1899,7 @@ button:hover{
     height: 425px;
     position: relative;
     margin-left: 40px;
-    margin-top: 50px;
+    margin-top: 75px;
 }
 .item_route_map2{
     width: 370px;
@@ -1992,51 +2154,394 @@ button:hover{
     display: inline-block;
     word-break: break-all;
 }
+.S_left_wiki_skill_detail3{
+    width: 660px;
+    padding: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
+    word-break: break-all;
+    border-top:  1px solid #3b4147;
+    margin-top: 30px;
+}
 .S_left_wiki_stats_all{
     background-color: #262335;
-    width: 780px;
-    height: 400px;
+    width: 360px;
+    height: 770px;
     border-radius: 3px;
-    margin-top: 10px;
+    float: right;
 }
 .S_left_wiki_stats_title{
     font-size: 15pt;
     text-align: left;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    padding-left: 50px;
     float: left;
-    width: 730px;
+    width: 360px;
+    height: 40px;
+    background-color: rgb(35, 27, 47);
+    border-bottom: 1px solid rgb(23, 21, 32);
+    border-radius: 3px 3px 0px 0px;
+    font-family: "Big Shoulders Stencil Display";
+    font-size: 23pt;
+    padding-top: 5px;
+    text-align: center;
 }
 .S_left_wiki_stats{
     float: left;
     background-color: #262335;
-    width: 200px;
-    margin: 20px;
-    margin-left: 35px;
+    width: 360px;
+    margin-bottom: 15px;
 }
 .S_left_wiki_stat_title{
-    width: 200px;
-    text-align: center;
-    font-size: 14pt;
+    width: 360px;
+    text-align: left;
+    font-size: 15pt;
     float: left;
     margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 2px solid #3b4147;
+    padding-bottom: 7px;
+    padding-left: 30px;
+    border-bottom: 1px solid #3b4147;
+    margin-top: 10px;
+    font-weight: 400;
 }
 .S_left_wiki_stat{
     float: left;
-    width: 200px;
+    width: 360px;
 }
 .S_left_wiki_stat1{
     float: left;
     text-align: left;
+    margin-left: 20px;
 }
 .S_left_wiki_stat2{
     float: right;
     text-align: right;
+    margin-right: 20px;
 }
-
+.S_left_skin_all{
+    background-color: #262335;
+    width: 360px;
+    border-radius: 3px;
+    float: right;
+}
+.S_left_skin_title{
+    font-size: 15pt;
+    text-align: left;
+    float: left;
+    width: 360px;
+    height: 40px;
+    background-color: rgb(35, 27, 47);
+    border-bottom: 1px solid rgb(23, 21, 32);
+    border-radius: 3px 3px 0px 0px;
+    font-family: "Big Shoulders Stencil Display";
+    font-size: 23pt;
+    padding-top: 5px;
+    text-align: center;
+}
+.S_left_skin_list{
+    cursor: pointer;
+}
+.S_left_skin_list:hover{
+    color: white;
+}
+.S_left_skin_all .actived{
+    color: #f4d823;
+    font-weight: 400;
+}
+.S_left_skin_list_name{
+    float: left;
+    display: inline-block;
+    width: 150px;
+    height: 48px;
+    padding-top: 22px;
+    text-align: left;
+    padding-left: 10px;
+    font-size: 12pt;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    border-left: 2px solid #81c147;
+}
+.S_left_skin_list_price{
+    float: left;
+    display: inline-block;
+    width: 70px;
+    height: 48px;
+    padding-top: 22px;
+    text-align: center;
+    font-size: 12pt;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+.S_left_skin_list_img{
+    float: left;
+    margin-left: 8px;
+}
+.S_Ranker{
+    width: 1152px;
+    clear: both;
+    margin-top: 0px;
+    float: left;
+}
+.S_Ranker_title{
+    width: 1152px;
+    height: 40px;
+    background-color: rgb(35, 27, 47);
+    border-bottom: 1px solid rgb(23, 21, 32);
+    border-radius: 3px 3px 0px 0px;
+    font-family: "Big Shoulders Stencil Display";
+    font-size: 23pt;
+    padding-top: 5px;
+    text-align: center;
+    float: left;
+}
+.S_Ranker_tabs{
+    float: left;
+    background-color: #262335;
+}
+.S_Ranker_tabs .actived{
+    border-bottom: 1px solid rgb(244,216,35);
+    color: white;
+}
+.S_Ranker_tab{
+    width: 384px;
+    float: left;
+    padding-bottom: 2px;
+    font-size: 16pt;
+    color: gray;
+    border-bottom: 1px solid #3b4147;
+    text-align: center;
+    cursor: pointer;
+}
+.S_Ranker_List:hover{
+    background-color: #251f32;
+    cursor: pointer;
+}
+.S_Ranker_List.actived{
+    background-color: #241b2f;
+    border-bottom: 1px solid #f4d823;
+}
+.S_Ranker_List{
+    background-color: #262335;
+    float: left;
+    width: 1152px;
+    height: 65px;
+    padding-top: 15px;
+    font-size: 12pt;
+    font-weight: 400;
+    border-bottom: 1px solid #3b4147;
+}
+.S_Ranker_List_rank{
+    display: inline-block;
+    width: 70px;
+    color: rgb(244,216,35);
+    font-family: "Big Shoulders Stencil Display";
+    font-size: 30pt;
+    text-align: center;
+    float: left;
+    margin-top: 2px;
+}
+.S_Ranker_List_1{
+    float: left;
+    width: 180px;
+}
+.S_Ranker_List_name{
+    display: inline-block;
+    width: 180px;
+    text-align: left;
+    float: left;
+}
+.S_Ranker_List_region{
+    display: inline-block;
+    width: 180px;
+    text-align: left;
+    color: gray;
+    float: left;
+    font-size: 11pt;
+}
+.S_Ranker_List_2{
+    float: left;
+    width: 130px;
+}
+.S_Ranker_List_mode{
+    display: inline-block;
+    width: 130px;
+    text-align: center;
+    float: left;
+}
+.S_Ranker_List_time{
+    display: inline-block;
+    width: 130px;
+    text-align: center;
+    float: left;
+    color: gray;
+    font-size: 11pt;
+}
+.S_Ranker_List_chaimg{
+    border-radius: 100%;
+    float: left;
+}
+.S_Ranker_List_weaponimg{
+    border-radius: 100%;
+    width: 40px;
+    float: left;
+    margin-top: 10px;
+    margin-left: 3px;
+    margin-right: 30px;
+}
+.S_Ranker_List_tier{
+    display: inline-block;
+    width: 160px;
+    text-align: center;
+    float: left;
+    margin-top: 10px;
+}
+.S_Ranker_List_lv{
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    float: left;
+    margin-top: 10px;
+}
+.S_Ranker_List_3{
+    float: left;
+    width: 170px;
+}
+.S_Ranker_List_kda{
+    display: inline-block;
+    width: 170px;
+    text-align: center;
+    float: left;
+}
+.S_Ranker_List_dmg{
+    display: inline-block;
+    width: 170px;
+    text-align: center;
+    float: left;
+    color: gray;
+    font-size: 11pt;
+}
+.S_Ranker_List_items{
+    float: left;
+    width: 180px;
+    margin-top: -10px;
+    margin-left: 20px;
+}
+.S_Ranker_List_itembox{
+    position: relative;
+    border-radius: 3px;
+    width: 55px;
+    height: 30.45px;
+    float: left;
+    margin: 2px;
+}
+.S_Ranker_List_item{
+    position: absolute;
+    border-radius: 3px;
+    width: 53px;
+    margin: 1px;
+}
+.S_Ranker_List_itembg{
+    position: absolute;
+    border-radius: 3px;
+    width: 53px;
+    border: 1px solid  gray;
+}
+.S_Ranker_detail{
+    width: 1152px;
+    float: left;
+    background-color: #251f32;
+    border-bottom: 1px solid #3b4147;
+}
+.S_Ranker_detail_left{
+    float: left;
+    width: 652px;
+}
+.S_Ranker_detail_span1{
+    float: left;
+    font-size: 13pt;
+    margin-left: 50px;
+    font-weight: 400;
+    margin-top: 30px;
+}
+.S_Ranker_detail_items{
+    clear: both;
+    float: left;
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.S_Ranker_detail_itembox{
+    position: relative;
+    border-radius: 3px;
+    width: 65px;
+    height: 36px;
+    float: left;
+    margin: 2px;
+    margin-left: 4px;
+}
+.S_Ranker_detail_item{
+    position: absolute;
+    border-radius: 3px;
+}
+.S_Ranker_detail_itembg{
+    position: absolute;
+    border-radius: 3px;
+}
+.S_Ranker_detail_span2{
+    clear: both;
+    float: left;
+    font-size: 13pt;
+    margin-left: 50px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+.S_Ranker_route_boxs{
+    clear: both;
+    margin-left: 50px;
+    width: 530px;
+}
+.S_Ranker_route_box{
+    float: left;
+    background-color: #17121f;
+    border-radius: 3px;
+    padding: 2px;
+    padding-left: 0px;
+    min-height: 64px;
+    min-width: 70px;
+    margin-right: 5px;
+    margin-top: 10px;
+}
+.S_Ranker_route_v{
+    float: left;
+    background-color: #17121f;
+    margin-right: 5px;
+    margin-top: 30px;
+    text-align: center;
+    width: 20px;
+    padding-bottom: 3px;
+    border-radius: 3px;
+}
+.S_Ranker_route_locate{
+    text-align: center;
+    font-size: 10pt;
+    padding-bottom: 3px;
+}
+.S_Ranker_detail_skilltree{
+    clear: both;
+    float: left;
+    width: 530px;
+    height: 240px;
+    background-color: gray;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.S_Ranker_detail_right{
+    float: left;
+    width: 500px;
+    padding-bottom: 40px;
+}
 .S_Trend{
     background-color: rgb(38, 35, 53);
     text-align: center;
